<resources>
    <string name="app_name">CS:GO Matches</string>
    <string name="action_main">Main</string>
    <string name="action_create">Create</string>
    <string name="action_logout">Logout</string>
    <string name="action_register">Register</string>
    <string name="action_reset">Reset</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_search">Search Term</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_conf_password">Confirm your password</string>
    <string name="title_activity_main">CS:GO Matches</string>
    <string name="lblCreate">Create</string>
    <string name="lblEdit">Edit</string>
    <string name="lblDisplay">Display</string>
    <string name="lblDelete">Delete</string>
    <string name="lblTeam1">Team 1:</string>
    <string name="lblTeam2">Team 2:</string>
    <string name="lblVs">VS</string>
    <string name="lblDate">Date :</string>
    <string name="lblTime">Time :</string>
    <string name="lblCancel">Cancel</string>
    <string name="lblAllMatches">All matches</string>
    <string name="lblSave">Save</string>
    <string name="lblSelectToEdit">Select match to edit</string>
    <string name="lblSelectToDel">Select match to delete</string>
    <string name="title_activity_main2">CS:GO Matches</string>
</resources>
